完成二次查询功能

--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,11 @@
 			<version>2.3.4.726</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.jsqlparser</groupId>
+			<artifactId>jsqlparser</artifactId>
+			<version>0.9</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.4</version>
@@ -293,6 +298,11 @@
 			<version>1.2.130</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		<groupId>commons-beanutils</groupId>
+		<artifactId>commons-beanutils</artifactId>
+		<version>1.9.2</version>
+	</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -326,6 +336,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.4</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.11.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
